redux case for testing “action” block

--- a/packages/components/addon/components/hds/alert/index.hbs
+++ b/packages/components/addon/components/hds/alert/index.hbs
@@ -16,6 +16,7 @@
     </div>
 
     {{#if (has-block "actions")}}
+      <pre>ACTIONS BLOCK IN ALERT</pre>
       <div class="hds-alert__actions">
         {{yield
           (hash
