--- a/packages/components/addon/components/hds/toast/index.hbs
+++ b/packages/components/addon/components/hds/toast/index.hbs
@@ -10,6 +10,7 @@
 >
   <:actions as |A|>
     {{#if (has-block "actions")}}
+      <pre>ACTIONS BLOCK IN TOAST</pre>
       {{yield A to="actions"}}
     {{/if}}
   </:actions>
