--- a/packages/components/tests/dummy/app/templates/components/toast.hbs
+++ b/packages/components/tests/dummy/app/templates/components/toast.hbs
@@ -1,6 +1,6 @@
 {{page-title "Toast component"}}
 
-<h2 class="dummy-h2">Toast</h2>
+<h2 class="dummy-h2">Alert</h2>
 
 <Hds::Alert
   @type="inline"
