--- a/packages/components/tests/dummy/app/templates/components/toast.hbs
+++ b/packages/components/tests/dummy/app/templates/components/toast.hbs
@@ -68,8 +68,8 @@
   @onDismiss={{this.noop}}
 >
   <:actions as |A|>
-    {{#if this.fakeBool}}
+    {{~#if this.fakeBool}}
       <A.Button @text="Action" @color="secondary" />
-    {{/if}}
+    {{/if~}}
   </:actions>
 </Hds::Toast>
