--- a/packages/components/addon/components/hds/alert/index.hbs
+++ b/packages/components/addon/components/hds/alert/index.hbs
@@ -15,27 +15,19 @@
       {{/if}}
     </div>
 
-    {{! Notice: the arg "ignoreActionsBlock" is not officially part of the API of the "Alert" component, but is used to by-pass the problem of Ember passing down the <actions> block even if there are no "actions" declared in the Toast }}
-    {{#if (and (has-block "actions") (not @ignoreActionsBlock))}}
-      {{! IMPORTANT: here we have to rely on handlebar's "squishies" (`~`) to remove the extra whitespace added by Ember (we're using ':empty' in CSS to hide the actions block when it's empty!) }}
-      {{! Notice: this needs to be done also on the consumer side too, unfortunately ¯\_(ツ)_/¯ }}
-      {{! See here: https://handlebarsjs.com/guide/expressions.html#whitespace-control }}
-      <div class="hds-alert__actions">
-        {{~yield
-          (hash
-            Button=(component "hds/button" size="small")
-            Link::Standalone=(component "hds/link/standalone" size="small")
-            LinkTo::Standalone=(component "hds/link-to/standalone" size="small")
-          )
-          to="actions"
-        ~}}
-      </div>
-    {{/if}}
-
-    {{! Notice: the arg "ignoreGenericBlock" is not officially part of the API of the "Alert" component, but is used to by-pass the problem of Ember passing down the <generic> block even if there is no "generic" content declared in the Toast }}
-    {{#if (and (has-block "generic") (not @ignoreGenericBlock))}}
-      {{yield to="generic"}}
-    {{/if}}
+    {{! IMPORTANT: here we have to rely on handlebar's "squishies" (`~`) to remove the extra whitespace added by Ember (we're using ':empty' in CSS to hide the actions block when it's empty!) }}
+    {{! Notice: this needs to be done also on the consumer side too, unfortunately ¯\_(ツ)_/¯ }}
+    {{! See here: https://handlebarsjs.com/guide/expressions.html#whitespace-control }}
+    <div class="hds-alert__actions">
+      {{~yield
+        (hash
+          Button=(component "hds/button" size="small")
+          Link::Standalone=(component "hds/link/standalone" size="small")
+          LinkTo::Standalone=(component "hds/link-to/standalone" size="small")
+        )
+      ~}}
+    </div>
+    {{~yield (hash Generic=(component "hds/yield"))~}}
   </div>
 
   {{#if this.onDismiss}}
