--- a/packages/components/app/styles/components/alert.scss
+++ b/packages/components/app/styles/components/alert.scss
@@ -93,8 +93,10 @@
 .hds-alert__actions {
   align-items: center;
   display: flex;
-  margin-top: 16px;
-  outline: 2px dashed magenta; // used for visual debugging
+
+  > * {
+    margin-top: 16px;
+  }
 
   > * + * {
     margin-left: 16px;
